[tool.poetry]
name = "lightson"
version = "0.1.0"
description = ""
authors = ["Yusuf Kaka <yusufkaka@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
dapr = "^1.8.3"
dapr-ext-grpc = "^1.8.3"
dapr-ext-fastapi = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "lightson.main:start"